--- a/app/views/compras/ordenes/modales/listaProductoAdenda.scala.html
+++ b/app/views/compras/ordenes/modales/listaProductoAdenda.scala.html
@@ -7,8 +7,8 @@
 			<thead>
 				<tr>
 					<th>Producto</th>
-					<th width="100">Precio Incial</th>
-					<th width="100">Precio Con Adendas</th>
+					<th width="">Precio Incial</th>
+					<th width="">Precio Con Adendas</th>
 				</tr>
 			</thead>
 			<tbody>
