--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -56,30 +56,34 @@
 		<div  class="col-sm-1">
 			<a href="/"><img height="55" alt="Logo" src="/assets/images/logo-solo.png" /></a>
 		</div>
-		<div  class="col-sm-8">
+		<div  class="col-sm-7">
 			<h1 id="tituloHeader">SISTEMA ADMINISTRACION PARQUE DE LA SALUD</h1>
-			<h2 class="subtituloHeader"><i>"Parque de la Salud de la Provincia de Misiones Dr. Ramón Madariaga Ley XVII Nº 70"</i></h2>
+			<h2 class="subtituloHeader"><i>"Parque de la Salud de la Provincia de Misiones Dr. Ramón Madariaga Ley XVII Nº 70" </i></h2>
 		</div>
 
 		<div class="col-sm-1" style=" margin-top: 10px"><a style="color: @if(models.Ticket.tieneSinLeer() && Usuario.getUsuarioSesion() == 1) {red} else {#fff}; font-size: 30px;" href="@controllers.administracion.routes.TicketsController.index()"><i class="glyphicon glyphicon-inbox"></i></a></div>
-		<div class="col-sm-2" >
+		<div class="col-sm-3" >
+
 		<a class="navbar-brand" style="color:#FFFFFF" href="@routes.Authentication.logout()">
-		    (@if(session.get("nick") != null) {@(session.get("nick"))}) <i class="glyphicon glyphicon-log-out"></i> Salir</a>
-		</div>    
+		    (@if(session.get("nick") != null) {@(session.get("nick"))}) <i class="glyphicon glyphicon-log-out"></i> Salir
+			@if(Usuario.getUsuarioSesion() == 1){@models.Ticket.getBase()}
+		</a>
+
+		</div>
 	</div>
 	<!-- -------------------------------------------------------------------------------------------- -->
-	
+
 	<div class="navbar navbar-menu-principal navbar-static-top "></div>
 	<nav class="navbar navbar-default navbarSap">
 	  <div class="container-fluid">
 		<!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-navSap">
-	      
-	        <!-- <li class="active"><a class="navbar-brand" href="#">Link <span class="sr-only">(current)</span></a></li>  
-	        
+
+	        <!-- <li class="active"><a class="navbar-brand" href="#">Link <span class="sr-only">(current)</span></a></li>
+
 	        <li><a class="navbar-brand" href="@routes.Application.index()">Inicio</a></li>-->
-	        
+
 			@if(Modulo.check(Modulo.COMPRAS)) {
 				<li><a class="navbar-brand @getClassEstadoActive("compras")" href="@controllers.compras.routes.IndexController.index()">Compras</a></li>
 			}
@@ -92,7 +96,7 @@
 			@if(Modulo.check(Modulo.RRHH)) {
 				<li><a class="navbar-brand @getClassEstadoActive("rrhh")" href="@controllers.rrhh.routes.IndexController.index()">RRHH</a></li>
 			}
-			
+
 			@if(Modulo.check(Modulo.PRESUPUESTO)) {
 				<li><a class="navbar-brand @getClassEstadoActive("presupuesto")" href="@controllers.presupuesto.routes.IndexController.index()">Presupuesto</a></li>
 			}
@@ -117,10 +121,10 @@
 			@if(Modulo.check(Modulo.INFORMES)) {
 				<li><a class="navbar-brand @getClassEstadoActive("recupero")" href="@controllers.informes.routes.IndexController.index()">Informes Gerenciales</a></li>
 			}
-	        
-	        
-	        
-	        
+
+
+
+
 	        <!-- <li class="dropdown">
 	          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
 	          <ul class="dropdown-menu" role="menu">
@@ -134,24 +138,24 @@
 	          </ul>
 	        </li> -->
 	      </ul>
-	      
-	      
+
+
 	    </div><!-- /.navbar-collapse -->
 	  </div><!-- /.container-fluid -->
 	</nav>
 	<div class="navbar navbar-menu-principal navbar-static-top "></div>
-	
-	
-	
+
+
+
 	<!--  ---------------------------------------------------------------------------------------------->
-	
+
 
 	<div class="container">
 		@content
 	</div>
 
 
-           
-	
+
+
 </body>
 </html>
