--- a/app/views/compras/ordenesSubrubro/optionsListSubrubro.scala.html
+++ b/app/views/compras/ordenesSubrubro/optionsListSubrubro.scala.html
@@ -1,3 +1,3 @@
 @(subRubro: List[OrdenSubrubro])
 <option value>Seleccionar</option>
-@for(p <- subRubro) {<option value="@p.id.toString">@p.nombre</option>}
+@for(p <- subRubro) {<option value="@p.id.toString">@p.sigla</option>}
