--- a/app/views/rrhh/especialidad/indexEspecialidad.scala.html
+++ b/app/views/rrhh/especialidad/indexEspecialidad.scala.html
@@ -1,23 +1,42 @@
 @(buscador: utils.pagination.Pagination[Especialidad], formBuscador: DynamicForm)
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 @views.html.rrhh.mainRrhh("Lista Especialidades") {
 
 	<div class="page-header">
 		<div class="row">
-			<div class="col-sm-10">
+			<div class="col-sm-7">
 				<h1>Lista de Especialidades</h1>
 			</div>
-			<div class="col-sm-2">
-				<a href="@controllers.rrhh.routes.EspecialidadesController.indexEspecialidad()" class="btn btn-default">
-					<i class="glyphicon glyphicon-list"></i>
-				</a>
-				<a href="#" class="btn btn-default">
-					<i class="glyphicon glyphicon-align-justify"></i>
-				</a>
+			<div class="col-sm-5">
+				<!--   <div class="dropdown pull-right">
+				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+				 	<i class="glyphicon glyphicon-list-alt"></i>
+				    Reportes
+				    <span class="caret"></span>
+				  </button>
+
+				</div>-->
+
+				<!--<div class="dropdown pull-right btn-header">
+				 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+				 	<i class="glyphicon glyphicon-cog"></i>
+				    Acciones
+				    <span class="caret"></span>
+				  </button>
+
+				</div>-->
+
+				<div class="pull-right btn-header">
+					<a href="@controllers.rrhh.routes.EspecialidadesController.crearEspecialidad"  class="form-control btn btn-default"><i class="glyphicon glyphicon-plus-sign"></i> Nueva Especialidad</a>
+				</div>
 			</div>
+
+
 		</div>
+
+
 	</div>
 	<div id="actions">
 		<div class="row">
@@ -46,41 +65,41 @@
 	</div>
 	<div class="row">
 		<div class="col-sm-2">
-			<a href="@controllers.rrhh.routes.EspecialidadesController.crearEspecialidad"  class="form-control btn btn-default">Nueva Especialidad</a>
+
 		</div>
 	</div>
-	
+
 	@if(buscador.getTotalRowCount == 0) {
-        
+
         <div class="well">
             <em>No se encuentran Especialidades</em>
         </div>
-        
+
     } else {
-		
-		Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). 
-		
+
+		Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).
+
 		<table class="table table-striped table-bordered">
 			<thead>
 				<tr>
-					<th width="50">#</th>
-					<th width="100">"Código"</th>
-					<th width="300">Nombre</th>
-					<th class="50">#</th>
+					<th width="30">#</th>
+					<th width="50">Código</th>
+					<th>Nombre</th>
+					<th class="30">#</th>
 				</tr>
 			</thead>
 			<tbody>
 			@for(especialidad <- buscador.getList) {
 				<tr>
 					<td>
-						<a href="@controllers.rrhh.routes.EspecialidadesController.editarEspecialidad(especialidad.id)">
+						<a  class="btn btn-default btn-xs notSeleccion" href="@controllers.rrhh.routes.EspecialidadesController.editarEspecialidad(especialidad.id)">
 							<i class="glyphicon glyphicon-edit"></i>
 						</a>
 					</td>
 					<td>@(especialidad.id)</td>
 					<td>@(especialidad.nombre)</td>
 					<td>
-						<a href="@controllers.rrhh.routes.EspecialidadesController.eliminarEspecialidad(especialidad.id)">
+						<a class="btn btn-default btn-xs delete-confirm-link notSeleccion" href="@controllers.rrhh.routes.EspecialidadesController.eliminarEspecialidad(especialidad.id)">
 							<i class="glyphicon glyphicon-remove-circle"></i>
 						</a>
 					</td>
@@ -88,13 +107,12 @@
              }
 	        </tbody>
         </table>
-		
+
 		<div class="pagination pull-right">
 		    @views.html.helpers.paginador(buscador, controllers.rrhh.routes.EspecialidadesController.indexEspecialidad())
 		</div>
  	 }
 }
-		
-		
-	
-	
+
+
+
