--- a/app/views/dashboard/deudasGlobalizadas/index082023.scala.html
+++ b/app/views/dashboard/deudasGlobalizadas/index082023.scala.html
@@ -11,6 +11,19 @@
 		<div class="col-sm-7">
 			<h1>Resumen</h1>
 		</div>
+		<div class="col-sm-5">
+			<div class="dropdown pull-right">
+			 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
+			 	<i class="glyphicon glyphicon-list-alt"></i>
+			    Reportes
+			    <span class="caret"></span>
+			  </button>
+			  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+			  <li role="presentation">
+			  <a id="" role="menuitem" tabindex="-1" href="@controllers.dashboard.routes.DeudasGlobalizadasController.resumen082023ExportExcel()">Reporte Excel</a></li>
+			  </ul>
+			</div>
+		</div>
 	</div>
 </div>
 
