--- a/app/views/dashboard/deudasGlobalizadas/resumen082023.scala.html
+++ b/app/views/dashboard/deudasGlobalizadas/resumen082023.scala.html
@@ -7,9 +7,12 @@ proveedoresOtrosEquipos: List[com.avaje.ebean.SqlRow]
 @import utils._
 @import models.auth._
 @implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
-@import java.math.BigDecimal;var haycms = new Boolean(false);var monto_total_tramite_nr_tmp= new java.math.BigDecimal(0); var monto_total_cms_tmp= new java.math.BigDecimal(0);var monto_total_tramite_cms_tmp= new java.math.BigDecimal(0);var haypindoi:Boolean = new Boolean(false);var monto_total_pindoi_tmp= new java.math.BigDecimal(0);var monto_total_tramite_pindoi_tmp= new java.math.BigDecimal(0);var haypacific:Boolean = new Boolean(false);var monto_total_pacific_tmp= new java.math.BigDecimal(0);var monto_total_tramite_pacific_tmp= new java.math.BigDecimal(0);var haynr :Boolean = new Boolean(false);var monto_total_nr_tmp= new java.math.BigDecimal(0);var haysanjorge :Boolean = new Boolean(false);var monto_total_sanjorge_tmp= new java.math.BigDecimal(0);var monto_total_tramite_sanjorge_tmp= new java.math.BigDecimal(0);var haysafita:Boolean = new Boolean(false);var monto_total_safita_tmp= new java.math.BigDecimal(0);var monto_total_tramite_safita_tmp= new java.math.BigDecimal(0);var monto_total_deuda = new java.math.BigDecimal(0);var monto_total_tramite = new java.math.BigDecimal(0);var hayips:Boolean = new Boolean(false);var haybisio:Boolean = new Boolean(false);var hayra:Boolean = new Boolean(false);var hayteje:Boolean = new Boolean(false);var hayyaka:Boolean = new Boolean(false);var monto_total_bisionesServicios_tmp = new java.math.BigDecimal(0);var monto_total_tramite_bisionesServicios_tmp = new java.math.BigDecimal(0);var total_deuda  = new java.math.BigDecimal(0);var monto_total_bisio_tmp = new java.math.BigDecimal(0);var monto_total_tramite_bisio_tmp = new java.math.BigDecimal(0);var monto_total_equipos_tmp = new java.math.BigDecimal(0);var monto_total_tramite_equipos_tmp = new java.math.BigDecimal(0);var monto_total_otrosrubros_tmp = new java.math.BigDecimal(0);var monto_total_tramite_otrosrubros_tmp = new java.math.BigDecimal(0);var monto_total_servicios_tmp  = new java.math.BigDecimal(0);var monto_total_tramite_servicios_tmp  = new java.math.BigDecimal(0);var zero = new java.math.BigDecimal(0);var monto_total_ips_tmp=new java.math.BigDecimal(0);var monto_total_tramite_ips_tmp=new java.math.BigDecimal(0);var monto_total_ra_tmp=new java.math.BigDecimal(0);var monto_total_tramite_ra_tmp=new java.math.BigDecimal(0);var monto_total_teje_tmp=new java.math.BigDecimal(0);var monto_total_tramite_teje_tmp=new java.math.BigDecimal(0);var monto_total_yaka_tmp=new java.math.BigDecimal(0);var monto_total_tramite_yaka_tmp=new java.math.BigDecimal(0);
-@views.html.dashboard.mainDashboard("Deudas Globalizadas") {
+@import java.math.BigDecimal;var haycms = new Boolean(false);var haymission = new Boolean(false);var monto_total_mission_tmp= new java.math.BigDecimal(0);var monto_total_tramite_mission_tmp= new java.math.BigDecimal(0);var monto_total_tramite_nr_tmp= new java.math.BigDecimal(0); var monto_total_cms_tmp= new java.math.BigDecimal(0);var monto_total_tramite_cms_tmp= new java.math.BigDecimal(0);var haypindoi:Boolean = new Boolean(false);var monto_total_pindoi_tmp= new java.math.BigDecimal(0);var monto_total_tramite_pindoi_tmp= new java.math.BigDecimal(0);var haypacific:Boolean = new Boolean(false);var monto_total_pacific_tmp= new java.math.BigDecimal(0);var monto_total_tramite_pacific_tmp= new java.math.BigDecimal(0);var haynr :Boolean = new Boolean(false);var monto_total_nr_tmp= new java.math.BigDecimal(0);var haysanjorge :Boolean = new Boolean(false);var monto_total_sanjorge_tmp= new java.math.BigDecimal(0);var monto_total_tramite_sanjorge_tmp= new java.math.BigDecimal(0);var haysafita:Boolean = new Boolean(false);var monto_total_safita_tmp= new java.math.BigDecimal(0);var monto_total_tramite_safita_tmp= new java.math.BigDecimal(0);var monto_total_deuda = new java.math.BigDecimal(0);var monto_total_tramite = new java.math.BigDecimal(0);var hayips:Boolean = new Boolean(false);var haybisio:Boolean = new Boolean(false);var hayra:Boolean = new Boolean(false);var hayteje:Boolean = new Boolean(false);var hayyaka:Boolean = new Boolean(false);var monto_total_bisionesServicios_tmp = new java.math.BigDecimal(0);var monto_total_tramite_bisionesServicios_tmp = new java.math.BigDecimal(0);var total_deuda  = new java.math.BigDecimal(0);var monto_total_bisio_tmp = new java.math.BigDecimal(0);var monto_total_tramite_bisio_tmp = new java.math.BigDecimal(0);var monto_total_equipos_tmp = new java.math.BigDecimal(0);var monto_total_tramite_equipos_tmp = new java.math.BigDecimal(0);var monto_total_otrosrubros_tmp = new java.math.BigDecimal(0);var monto_total_tramite_otrosrubros_tmp = new java.math.BigDecimal(0);var monto_total_servicios_tmp  = new java.math.BigDecimal(0);var monto_total_tramite_servicios_tmp  = new java.math.BigDecimal(0);var zero = new java.math.BigDecimal(0);var monto_total_ips_tmp=new java.math.BigDecimal(0);var monto_total_tramite_ips_tmp=new java.math.BigDecimal(0);var monto_total_ra_tmp=new java.math.BigDecimal(0);var monto_total_tramite_ra_tmp=new java.math.BigDecimal(0);var monto_total_teje_tmp=new java.math.BigDecimal(0);var monto_total_tramite_teje_tmp=new java.math.BigDecimal(0);var monto_total_yaka_tmp=new java.math.BigDecimal(0);var monto_total_tramite_yaka_tmp=new java.math.BigDecimal(0);
 
+
+
+@views.html.informes.mainInformes("RESUMEN") {
+<div class="page-content" class="" style="padding-left: 10px;">
 <div class="page-header">
 	<div class="row">
 		<div class="col-sm-7">
@@ -61,6 +64,14 @@ proveedoresOtrosEquipos: List[com.avaje.ebean.SqlRow]
 						@{monto_total_tramite_yaka_tmp= monto_total_tramite_yaka_tmp.add(pd.getBigDecimal("total_deuda_en_tramite"))}
 					}
 					@{hayyaka = new Boolean(true)}
+
+
+
+					@if(pd.getLong("proveedor_id").compareTo(new Long(17217)) == 0){  <!--MISSION GROUP S.R.L.-->
+						@{monto_total_mission_tmp= monto_total_mission_tmp.add(pd.getBigDecimal("total_deuda"))}
+						@{monto_total_tramite_mission_tmp= monto_total_tramite_mission_tmp.add(pd.getBigDecimal("total_deuda_en_tramite"))}
+					}
+					@{haymission = new Boolean(true)}
 
 					@if(pd.getLong("proveedor_id").compareTo(new Long(11081)) == 0){  <!-- IPS-->
 						@{monto_total_ips_tmp= monto_total_ips_tmp.add(pd.getBigDecimal("total_deuda"))}
@@ -136,7 +147,7 @@ proveedoresOtrosEquipos: List[com.avaje.ebean.SqlRow]
 
 				@if(haybisio){
 					<tr>
-						<td>BISIONES</td>
+						<td>BISIONES (Servicios + Insumos)</td>
 						<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_bisio_tmp)</td>
 						<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_tramite_bisio_tmp)</td>
 						<td align="right"><b style="font-size: 16px;">@utils.NumberUtils.monedaSinDecimales(monto_total_bisio_tmp.add(monto_total_tramite_bisio_tmp))</b></td>
@@ -175,7 +186,7 @@ proveedoresOtrosEquipos: List[com.avaje.ebean.SqlRow]
 				@if(hayteje){
 
 					<tr>
-						<td>TEJEDOR (protesis + dialisis + alimentacion parenteral)</td>
+						<td>TEJEDOR (IMPLANTEJ - LAS MISIONES - PRESTACIONES NEFROLOGICAS)</td>
 						<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_teje_tmp)</td>
 						<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_tramite_teje_tmp)</td>
 						<td align="right"><b style="font-size: 16px;">@utils.NumberUtils.monedaSinDecimales(monto_total_teje_tmp.add(monto_total_tramite_teje_tmp))</b></td>
@@ -185,26 +196,37 @@ proveedoresOtrosEquipos: List[com.avaje.ebean.SqlRow]
 				}
 
 				<!-- NR (mensual + insumos) -->
-				@if(haynr){
+				<!--@if(haynr){
 					<tr>
-						<td>NR (mensual + insumos)</td>
+						<td>NR (Servicio mensual + Insumos)</td>
 						<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_nr_tmp)</td>
 						<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_tramite_nr_tmp)</td>
 						<td align="right"><b style="font-size: 16px;">@utils.NumberUtils.monedaSinDecimales(monto_total_nr_tmp.add(monto_total_tramite_nr_tmp))</b></td>
 					</tr>
 					@{monto_total_deuda = monto_total_deuda.add(monto_total_nr_tmp)}
 					@{monto_total_tramite = monto_total_tramite.add(monto_total_tramite_nr_tmp)}
-				}
+				}-->
 
 				@if(hayyaka){
 					<tr>
-						<td>YAKARO (incluido Mission Group)</td>
+						<td>YAKARO</td>
 						<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_yaka_tmp)</td>
 						<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_tramite_yaka_tmp)  </td>
 						<td align="right"><b style="font-size: 16px;">@utils.NumberUtils.monedaSinDecimales(monto_total_yaka_tmp.add(monto_total_tramite_yaka_tmp))</b></td>
 					</tr>
 					@{monto_total_deuda = monto_total_deuda.add(monto_total_yaka_tmp)}
 					@{monto_total_tramite = monto_total_tramite.add(monto_total_tramite_yaka_tmp)}
+				}
+
+				@if(haymission){
+					<tr>
+						<td>MISSION GROUP S.R.L.</td>
+						<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_mission_tmp)</td>
+						<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_tramite_mission_tmp)  </td>
+						<td align="right"><b style="font-size: 16px;">@utils.NumberUtils.monedaSinDecimales(monto_total_mission_tmp.add(monto_total_tramite_mission_tmp))</b></td>
+					</tr>
+					@{monto_total_deuda = monto_total_deuda.add(monto_total_mission_tmp)}
+					@{monto_total_tramite = monto_total_tramite.add(monto_total_tramite_mission_tmp)}
 				}
 
 				<!-- Pacific Ocean-->
@@ -220,7 +242,7 @@ proveedoresOtrosEquipos: List[com.avaje.ebean.SqlRow]
 				}
 
 				<!-- Constructora Pindoi-->
-				@if(haypindoi){
+				<!--@if(haypindoi){
 					<tr>
 						<td>Constructora Pindoi</td>
 						<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_pindoi_tmp)</td>
@@ -229,7 +251,7 @@ proveedoresOtrosEquipos: List[com.avaje.ebean.SqlRow]
 					</tr>
 					@{monto_total_deuda = monto_total_deuda.add(monto_total_pindoi_tmp)}
 					@{monto_total_tramite = monto_total_tramite.add(monto_total_tramite_pindoi_tmp)}
-				}
+				}-->
 
 				<!-- CMS-->
 
@@ -246,7 +268,7 @@ proveedoresOtrosEquipos: List[com.avaje.ebean.SqlRow]
 
 
 				<tr>
-					<td>OTROS SERVICIOS</td>
+					<td>OTROS SERVICIOS (Oxigeno, Jefatura, Multimedios, Derivaciones, Mantenimiento Equipos, Pasajes, etc)</td>
 					<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_servicios_tmp)</td>
 					<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_tramite_servicios_tmp)</td>
 					<td align="right"><b style="font-size: 16px;">@utils.NumberUtils.monedaSinDecimales(monto_total_servicios_tmp.add(monto_total_tramite_servicios_tmp))</b></td>
@@ -255,7 +277,7 @@ proveedoresOtrosEquipos: List[com.avaje.ebean.SqlRow]
 					@{monto_total_tramite = monto_total_tramite.add(monto_total_tramite_servicios_tmp)}
 
 				<tr>
-					<td>OTROS PROVEEDORES</td>
+					<td>OTROS PROVEEDORES (Protesis, descartables, repuestos, libreria, combustible, agua, etc)</td>
 					<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_otrosrubros_tmp)</td>
 					<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_tramite_otrosrubros_tmp)</td>
 					<td align="right"><b style="font-size: 16px;">@utils.NumberUtils.monedaSinDecimales(monto_total_otrosrubros_tmp.add(monto_total_tramite_otrosrubros_tmp))</b></td>
@@ -264,7 +286,7 @@ proveedoresOtrosEquipos: List[com.avaje.ebean.SqlRow]
 					@{monto_total_tramite = monto_total_tramite.add(monto_total_tramite_otrosrubros_tmp)}
 
 				<tr>
-					<td>OTROS EQUIPAMIENTOS.</td>
+					<td>EQUIPAMIENTOS</td>
 					<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_equipos_tmp)</td>
 					<td align="right">@utils.NumberUtils.monedaSinDecimales(monto_total_tramite_equipos_tmp)  </td>
 					<td align="right"><b style="font-size: 18px;">@utils.NumberUtils.monedaSinDecimales(monto_total_equipos_tmp.add(monto_total_tramite_equipos_tmp))</b></td>
@@ -276,7 +298,7 @@ proveedoresOtrosEquipos: List[com.avaje.ebean.SqlRow]
 			</tbody>
 			<tfoot>
 				<tr>
-					<td align="right"><b>TOTALES</b></td>
+					<td align="right"><b>SUB-TOTALES</b></td>
 					<td align="right"><b>@utils.NumberUtils.monedaSinDecimales(monto_total_deuda)</b></td>
 					<td align="right"><b>@utils.NumberUtils.monedaSinDecimales(monto_total_tramite)</b></td>
 					<td align="right"><b style="font-size: 18px;">@utils.NumberUtils.monedaSinDecimales(monto_total_deuda.add(monto_total_tramite))</b></td>
@@ -312,7 +334,7 @@ proveedoresOtrosEquipos: List[com.avaje.ebean.SqlRow]
 		</table>
 <hr>
 
-		<table class="table table-striped table-bordered table-hover" id="listaInforme">
+		<!-- <table class="table table-striped table-bordered table-hover" id="listaInforme">
 
 			<thead>
 				<th style="text-align: center;" width="300">PROVEDORES</th>
@@ -332,8 +354,9 @@ proveedoresOtrosEquipos: List[com.avaje.ebean.SqlRow]
 
 
 			</tfoot>
-		</table>
+		</table> -->
 
 	</div>
+</div>
 </div>
 }
