--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -8,7 +8,7 @@ body {
 #loading2 {width: 100%; height: 35px; background: url('/assets/images/ajax-loader.gif') no-repeat center;}
 #loading-bg-50 {width: 100%; height: 50px; background: url('/assets/images/ajax-loader3.gif') no-repeat center;}
 
- 
+
 #header {height: 62px; background: #666666;}
 #header img {border-radius: 10px; margin: 5px 5px 0 0}
 #header h1 {font-size: 14px}
@@ -27,19 +27,19 @@ body {
 /*
  * Formularios
  */
- 
+
  .buttonset label{font-weight: normal;}
- 
+
  .form-busqueda {
  	border-bottom: 1px solid #d3d3d3
  }
- 
+
  .form-actions {
  	background-color: #e6e6e6;
  	padding: 15px 0;
  	border-top: 1px solid #d3d3d3
  }
- 
+
 .form-control {
 	font-size: 13px;
 	padding: 3px 6px;
@@ -92,11 +92,11 @@ label {margin-bottom: 0}
  	font-size: 13px;
  	padding: 2px 10px;
  }
- 
+
  .btn-lg {
  	font-size: 18px;
  }
- 
+
  .btn-default {
 	color: #000;
 	background-color: #a1a09f;
@@ -108,7 +108,7 @@ label {margin-bottom: 0}
 	background: #d7d6d6;
 	border-color: #9c9c9c;
 }
- 
+
 .btn-sistema {
 	color: #000;
 	background-color: #a1a09f;
@@ -177,16 +177,16 @@ label {margin-bottom: 0}
 }
 
 .btn-filtros{
-	background:none;	
+	background:none;
 	background-color:#EDF0F5 !important;
 	/*background-image: linear-gradient(to bottom, #FFFFFF, #D7D6D6);*/
 }
 .btn-filtros:hover{
 	background-color:#8FB4EF !important;
-}	
+}
 .activeFiltro{
  	background-color:#8FB4EF !important;
-	 
+
  /*background-image: linear-gradient(to bottom, #909090, #D7D6D6);*/
  }
 
@@ -210,7 +210,7 @@ font-size: 14px;
 }
 
 .glyphicon-list-alt{
-	 
+
 font-size: 14px;
 }
 /*
@@ -253,7 +253,7 @@ thead {background-color: #dfdfdf;}
 	font-size: 12px;
 	font-weight: bold;
 	text-shadow: 1px 2px 0px #80302a;
-	
+
 	-moz-box-shadow: inset 0px 2px 8px -2px #f58b8b;
 	-webkit-box-shadow: inset 0px 2px 8px -2px #f58b8b;
 	box-shadow: inset 0px 2px 8px -2px #f58b8b;
@@ -417,10 +417,11 @@ li.collapsable > span, li.expandable > span {cursor: pointer}
  hr {border-bottom: 1px solid #d5d5d5}
 
 .help-block {font-size: 12px}
- 
+
 .icono-eliminar {color: #bf1c1c}
 
 .table tr.borrador td{color: blue;}
+.table tr.red td{color: red;}
 .table tr.cancelada td{color: gray;}
 .table tr.autorizado td, .caja-abierta{color: green;}
 .table tr.pagado td{color: #8A2BE2;}
@@ -465,16 +466,16 @@ li.collapsable > span, li.expandable > span {cursor: pointer}
 
 .colorRojo{
 	color: red;
-	font-size: 20px;	
+	font-size: 20px;
 }
 
 .colorRojoSmall{
 	color: red;
-	font-size: 14px;	
+	font-size: 14px;
 }
 
 .size-14{
-	font-size: 14px;	
+	font-size: 14px;
 }
 .signoDescuento{
 	font-size: 14px;
@@ -506,7 +507,7 @@ li.collapsable > span, li.expandable > span {cursor: pointer}
 }
 
 .navbar-brand{
-	font-size: 14px;	
+	font-size: 14px;
 }
 
 .navbar-brand-active{
@@ -567,7 +568,7 @@ li.collapsable > span, li.expandable > span {cursor: pointer}
 }
 
 .small-box>.inner {
-    padding: 5px 10px 5px 10px;  
+    padding: 5px 10px 5px 10px;
 }
 
 .small-box h3 {
