--- a/app/views/rrhh/agente/indexAgente.scala.html
+++ b/app/views/rrhh/agente/indexAgente.scala.html
@@ -319,7 +319,7 @@
 							<i class="glyphicon glyphicon-edit"></i>
 						</a>
 					</td>
-					<td>@(agente.apellido) - @(agente.getEdad())</td>
+					<td>@(agente.apellido)</td>
 					<td>@(agente.dni)</td>
 					<td>@(agente.cuit)</td>
 					<td>@if(agente.organigrama != null){@(agente.organigrama.nombre)}</td>
