--- a/app/views/contabilidad/balance/indexBalance.scala.html
+++ b/app/views/contabilidad/balance/indexBalance.scala.html
@@ -2,7 +2,7 @@
 @import helper._
 @import models.auth._
 @import java.math.BigDecimal;var debe=new java.math.BigDecimal(0);var haber=new java.math.BigDecimal(0);
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 @scripts = {
 	<script src="@routes.Assets.at("javascripts/contabilidad/balance.js")" type="text/javascript"></script>
 }
@@ -13,8 +13,8 @@
 		classEstado = "borrador"
 	}else if(i != null && i.id == 105){
 		classEstado = "autorizado"
-	} 
-	
+	}
+
 	classEstado
 }
 
@@ -40,11 +40,11 @@
 			  		 <a id="reporteArchivoBejermanPagos" href="#" data-url="@controllers.contabilidad.routes.BalanceController.archivoBejermanPagos()">Descargar Archivo Pagos</a>
 			  	</li>
 			  	<li role="presentation">
-			  		 <a id="reporteArchivoExcel" href="#" data-url="@controllers.contabilidad.routes.BalanceController.archivoExcel()">Descargar Excel</a></li>	 
-			
+			  		 <a id="reporteArchivoExcel" href="#" data-url="@controllers.contabilidad.routes.BalanceController.archivoExcel()">Descargar Excel</a></li>
+
 			  </ul>
 			</div>
-			
+
 			<div class="dropdown pull-right btn-header">
 			 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">
 			 	<i class="glyphicon glyphicon-list-alt"></i>
@@ -52,11 +52,11 @@
 			    <span class="caret"></span>
 			 </button>
 			  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-			  	    
-				<li role="presentation"><a role="menuitem" id="accionPasarBorrador" tabindex="-1" href="#" data-url="@controllers.contabilidad.routes.BalanceController.modalPasarBorrador()">Pasar a Borrador</a></li>	
-				<li role="presentation"><a role="menuitem" id="accionPasarControlado" tabindex="-1" href="#" data-url="@controllers.contabilidad.routes.BalanceController.modalPasarControlado()">Pasar a Controlado</a></li>	
+
+				<li role="presentation"><a role="menuitem" id="accionPasarBorrador" tabindex="-1" href="#" data-url="@controllers.contabilidad.routes.BalanceController.modalPasarBorrador()">Pasar a Borrador</a></li>
+				<li role="presentation"><a role="menuitem" id="accionPasarControlado" tabindex="-1" href="#" data-url="@controllers.contabilidad.routes.BalanceController.modalPasarControlado()">Pasar a Controlado</a></li>
 				<li role="presentation"><a role="menuitem" id="accionCambiarCuenta" tabindex="-1" href="#" data-url="@controllers.contabilidad.routes.BalanceController.modalCambiarCuenta()">Cambiar Cuenta</a></li>
-			 	
+
 			 </ul>
 			</div>
 		</div>
@@ -73,18 +73,18 @@
 					  <button type="button" rel="entregado" class="btn btn-default btn-filtros">
 					  	<i class="glyphicon glyphicon-arrow-right"></i><br>Controlado
 					  	@checkbox(formBuscador("btnFiltro[1]"), 'hidden -> "hidden")
-					  </button> 
+					  </button>
 					</div>
 				</div>
-			</div>  
+			</div>
 			<div class="row" >
 				<div class="col-sm-2">
 					<label class="control-label">Cuenta Propia
 					@select(formBuscador("cuenta_propia_id"),
-					CuentaPropia.find.all().map { p => p.id.toString -> p.nombre},'class -> "form-control select") 	
+					CuentaPropia.find.all().map { p => p.id.toString -> p.nombre},'class -> "form-control select")
 					</label>
 				</div>
-				
+
 				 <div class="col-sm-2 input-group">
 					<label class="control-label">Fecha</label>
 					<div>
@@ -92,14 +92,14 @@
 						@inputText(formBuscador("fecha_hasta"), 'class -> "form-control inputDateMascara", 'id -> "fecha_hasta", 'placeholder -> "Hasta")
 					</div>
 				</div>
-				 
+
 				<div class="col-sm-1">
 					<label class="control-label">Ejercicio
-					@select(formBuscador("ejercicio"), Ejercicio.getEjercicios().map { p => p.id.toString -> p.nombre}, 
+					@select(formBuscador("ejercicio"), Ejercicio.getEjercicios().map { p => p.id.toString -> p.nombre},
 					'class -> "form-control select" )
 					</label>
 				</div>
-				
+
 				<div class="col-sm-4">
 					<label class="control-label">Cuenta Balance
 						<div class="input-group">
@@ -107,13 +107,13 @@
 							@inputText(formBuscador("cuenta.id"), 'hidden -> "hidden", 'id -> "cuenta_id")
 							<span class="input-group-addon">
 								<a href="#" class="searchModal"
-											id="searchCuenta" 
-											data-title="Selección de Cuenta" 
-											data-url="@controllers.contabilidad.routes.CuentasController.modalBuscar()" 
-											data-height="650" 
-											data-width="700" 
-											data-listen="modal.seleccion.cuenta.simple" 
-											data-label="#cuenta" 
+											id="searchCuenta"
+											data-title="Selección de Cuenta"
+											data-url="@controllers.contabilidad.routes.CuentasController.modalBuscar()"
+											data-height="650"
+											data-width="700"
+											data-listen="modal.seleccion.cuenta.simple"
+											data-label="#cuenta"
 											data-field="#cuenta_id">
 									<i class="glyphicon glyphicon-search"></i>
 								</a>
@@ -122,7 +122,7 @@
 					</label>
 				</div>
 				<div class="col-sm-2">
-					<label class="control-label"> 
+					<label class="control-label">
 						TIPO
 						@select(formBuscador("tipo"),options(""->"","pagos"->"Pagos",
 															"facturas"->"Facturas",
@@ -140,13 +140,13 @@
 							@inputText(formBuscador("expediente.id"), 'hidden -> "hidden", 'id -> "expediente_id")
 							<span class="input-group-addon">
 								<a href="#" class="searchModal"
-											id="searchExpediente" 
-											data-title="Selección de expediente" 
-											data-url="@controllers.expediente.routes.ExpedientesController.modalBuscar()" 
-											data-height="650" 
-											data-width="700" 
-											data-listen="modal.seleccion.expediente.simple" 
-											data-label="#expediente" 
+											id="searchExpediente"
+											data-title="Selección de expediente"
+											data-url="@controllers.expediente.routes.ExpedientesController.modalBuscar()"
+											data-height="650"
+											data-width="700"
+											data-listen="modal.seleccion.expediente.simple"
+											data-label="#expediente"
 											data-field="#expediente_id">
 									<i class="glyphicon glyphicon-search"></i>
 								</a>
@@ -154,19 +154,19 @@
 						</div>
 				</div>
 				<div class="col-sm-2">
-				<label for="orden_pago_id" class="control-label">Orden de pago N° 
+				<label for="orden_pago_id" class="control-label">Orden de pago N°
 					<div class="input-group">
 						@inputText(formBuscador("ordenPago.numero"), 'class -> "form-control", 'id -> "orden_pago")
 						@inputText(formBuscador("ordenPago.id"),'hidden -> "hidden", 'id -> "orden_pago_id")
 						<span class="input-group-addon">
 							<a href="#" class="searchModal"
-										id="searchOp" 
-										data-title="Selección de órdenes de pago" 
-										data-url="@controllers.contabilidad.routes.OrdenesPagosController.modalBuscar()" 
-										data-height="650" 
-										data-width="700" 
-										data-listen="modal.seleccion.orden-pago.simple" 
-										data-label="#orden_pago" 
+										id="searchOp"
+										data-title="Selección de órdenes de pago"
+										data-url="@controllers.contabilidad.routes.OrdenesPagosController.modalBuscar()"
+										data-height="650"
+										data-width="700"
+										data-listen="modal.seleccion.orden-pago.simple"
+										data-label="#orden_pago"
 										data-field="#orden_pago_id">
 								<i class="glyphicon glyphicon-search"></i>
 							</a>
@@ -175,11 +175,27 @@
 				</label>
 				</div>
 				<div class="col-sm-2">
-						<label class="control-label"> 
+						<label class="control-label">
 							Marca
 							@select(formBuscador("marca"),options(""->"","SI"->"SI","NO"->"NO"), 'class -> "form-control select")
 						</label>
 					</div>
+
+				<div class="col-sm-2">
+				<label for="deposito" class="control-label">Institucion</label>
+				<div class="input-group">
+					@inputText(formBuscador("deposito.nombre"),'class -> "form-control", 'id -> "deposito_nombre", 'autocomplete -> "off")
+					@inputText(formBuscador("deposito_id"),'hidden -> "hidden", 'id -> "deposito_id")
+					<span class="input-group-addon">
+	                	<a href="#" id="searchDeposito"  class="searchModal" data-title="Selección de Institucion"
+	                	data-url="@controllers.delegacion.routes.DepositosController.modalBuscar()"
+	                	data-height="650" data-width="700"
+	                	data-listen="modal.seleccion.deposito.simple"
+	                	data-label="#deposito_nombre" data-field="#deposito_id" /> <i class="glyphicon glyphicon-search"></i></a>
+	                </span>
+				</div>
+				</div>
+
 				<div class="col-sm-2">
 					<div class="form-group">
 					<label for="nombre" class="control-label">&nbsp;</label>
@@ -192,6 +208,9 @@
 					<a href="@controllers.contabilidad.routes.BalanceController.index()?cuenta_propia_id=2"  class="form-control btn btn-default">Limpiar</a>
 					</div>
 				</div>
+
+
+
 			</div>
 		</form>
 	</div>
@@ -199,14 +218,14 @@
 <div class="row">
 	<div class="col-sm-12">
 	@if(buscador.getTotalRowCount == 0) {
-        
+
         <div class="well">
             <em>No se encuentran Lineas</em>
         </div>
-        
+
     } else {
-		Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s). 
-		
+		Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).
+
 		<table id="listaBalanceCuentaPropia" class="table table-striped table-bordered">
 			<thead>
 				<tr>
@@ -214,14 +233,15 @@
 					<th>Asiento</th>
 					<th>Cuenta</th>
 					<th>Cuenta Balance</th>
-					<th>OP</th> 
+					<th>OP</th>
 					<th>Exp</th>
 					<th>Fecha</th>
 					<th>DEBE</th>
 					<th>HABER</th>
 					<th>Estado</th>
 					<th>Tipo</th>
-					
+					<th>DATA</th>
+
 				</tr>
 			</thead>
 			<tbody>
@@ -231,30 +251,31 @@
 					<td>@if(bcp.asiento != null) {@bcp.asiento} </td>
 					<td>@if(bcp.cuentaPropia != null) {@bcp.cuentaPropia.nombre} -@bcp.id<br> @if(bcp.referencia != null) {@bcp.referencia}</td>
 					<td>@if(bcp.cuenta != null) {@bcp.cuenta.nombre - @bcp.cuenta.code} </td>
-					
+
 					<td>
 						@if(bcp.orden_pago_id != null){
 							@bcp.ordenPago.getNombreCompleto()
-						}	
+						}
 					</td>
 					<td>
 						@if(bcp.expediente_id != null){
 							@bcp.expediente.getExpedienteEjercicio()
 						}
-					</td>		
+					</td>
 					<td class="fecha">@if(bcp.fecha != null){@(utils.DateUtils.formatDate(bcp.fecha))}</td>
 					<td class="">@(utils.NumberUtils.moneda(bcp.debe))</td>
 					<td class="">@(utils.NumberUtils.moneda(bcp.haber))</td>
 					<td class="estado">@if(bcp.estado != null){@(bcp.estado.nombre)}</td>
 					<td class="">@bcp.tipo</td>
-					 
-				</tr>	
-				@{debe = debe.add(bcp.debe)}   
-				@{haber = haber.add(bcp.haber)}   
+					<td class="">@bcp.orden.deposito.nombre</td>
+
+				</tr>
+				@{debe = debe.add(bcp.debe)}
+				@{haber = haber.add(bcp.haber)}
 			}
 			</tbody>
 	        <tfoot>
-	        	<tr>	
+	        	<tr>
 	        		<td colspan="7">Mostrando @buscador.getDisplayXtoYofZ(" a "," de ") resultado(s).</td>
 	        		<td><b>Total DEBE:</b> <span class="totalFooter">@(utils.NumberUtils.moneda(debe))</span></td>
 	        		<td><b>Total HABER:</b> <span class="totalCreditoFooter">@(utils.NumberUtils.moneda(haber))</span></td>
@@ -262,12 +283,12 @@
 	        	</tr>
 	        </tfoot>
         </table>
-		
+
 		<div class="pagination pull-right">
 		    @views.html.helpers.paginadorTodos(buscador, controllers.contabilidad.routes.BalanceController.index())
 		</div>
 	}
-	</div>	
+	</div>
 </div>
 
 }
