--- a/app/views/rrhh/mainRrhh.scala.html
+++ b/app/views/rrhh/mainRrhh.scala.html
@@ -16,6 +16,8 @@
 					<!-- <li><a href="@controllers.rrhh.routes.AgentesAsistenciasLicenciasController.getListaLicenciasPendientes()">Licencias Pendientes</a></li> -->
 					<li><a href="@controllers.rrhh.routes.AgentesAsistenciasLicenciasController.getListaLicenciasEnFecha()">Licencias en Fecha</a></li>
 
+					<li><a href="@controllers.rrhh.routes.AgentesAsistenciasLicenciasController.indexLicenciaNovedadesLiquidacion()">Licencias por Periodos</a></li>
+
 
 				}
 
